removing last chunk and redundant title

--- a/_posts/python/offline/plotly_offline.ipynb
+++ b/_posts/python/offline/plotly_offline.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotly Offline\n",
-    "\n",
     "Plotly Offline brings interactive Plotly graphs to the offline (local) environment. \n",
     "\n",
     "Instead of saving the graphs to a server, your data and graphs will remain in your local system.\n",
@@ -491,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -525,13 +523,12 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-WfWGNq-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-QVMrFo-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
       "      Successfully uninstalled publisher-0.10\n",
-      "  Running setup.py install for publisher\n",
-      "Successfully installed publisher-0.10\n"
+      "  Running setup.py install for publisher\n"
      ]
     }
    ],
@@ -546,21 +543,12 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'plotly_offline.ipynb', 'python/offline/', 'Plotly Offline for IPython Notebooks',\n",
-    "    'How to use Plotly offline inside IPython notebooks with Plotly Offline',\n",
+    "    'How to use Plotly offline inside IPython notebooks',\n",
     "    title= 'Plotly Offline for IPython Notebooks',\n",
     "    name = 'Offline Plots in Plotly',\n",
     "    has_thumbnail='False', \n",
     "    language='python', page_type='example_index')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
