privacy doc update

--- a/_posts/python/privacy/privacy.ipynb
+++ b/_posts/python/privacy/privacy.ipynb
@@ -4,44 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Public, Private and Secret Graphs <br> in Python"
+    "#### API Authentication\n",
+    "New to Plotly's python API? <br> \n",
+    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
+    "Find your api_key here: https://plot.ly/settings/api"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you have an updated version of Plotly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.8.2'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Public Graphs"
+    "#### Public Graphs"
    ]
   },
   {
@@ -54,7 +27,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~neda/6988.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11804.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -66,9 +39,6 @@
     }
    ],
    "source": [
-    "# Learn about API authentication here: https://plot.ly/python/getting-started\n",
-    "# Find your api_key here: https://plot.ly/settings/api\n",
-    "\n",
     "import plotly.plotly as py\n",
     "from plotly.graph_objs import *\n",
     "\n",
@@ -90,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -98,10 +68,10 @@
     {
      "data": {
       "text/plain": [
-       "u'https://plot.ly/~neda/6988'"
+       "u'https://plot.ly/~chelsea_lyn/11804'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -127,13 +97,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~neda/6994.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11806.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -159,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "u'https://plot.ly/~neda/6994'"
+       "u'https://plot.ly/~chelsea_lyn/11806'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -188,13 +158,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~neda/6997.embed?share_key=KLZpeiMaST2rqfEyqkP5ho\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11808.embed?share_key=BhUjltcrv52kYxiz8zKgT7\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -220,10 +190,10 @@
     {
      "data": {
       "text/plain": [
-       "u'https://plot.ly/~neda/6997?share_key=KLZpeiMaST2rqfEyqkP5ho'"
+       "u'https://plot.ly/~chelsea_lyn/11808?share_key=BhUjltcrv52kYxiz8zKgT7'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,19 +207,12 @@
    "metadata": {},
    "source": [
     "## Making <b>ALL</b> of your Plotly Plots Private\n",
-    "####This example uses [Plotly's REST API](https://api.plot.ly/v2/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#####Import `json` and `requests` "
+    "This example uses [Plotly's REST API](https://api.plot.ly/v2/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -264,13 +227,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Define variables\n",
-    "Including YOUR [USERNAME and API KEY](https://plot.ly/settings/api)"
+    "Define variables, including YOUR [USERNAME and API KEY](https://plot.ly/settings/api)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -289,12 +251,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Collect filenames of <b>ALL</b> of your plots and <br>update `world_readable` of each plot with a PATCH request"
+    "Collect filenames of <b>ALL</b> of your plots and <br>update `world_readable` of each plot with a PATCH request"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -365,11 +327,10 @@
       "        'overwrite': overwrite the file associated with `filename` with this\n",
       "        'extend': add additional numbers (data) to existing traces\n",
       "        'append': add additional traces to existing data lists\n",
-      "    world_readable (default=True) -- make this figure private/public\n",
       "    auto_open (default=True) -- Toggle browser options\n",
       "        True: open this plot in a new browser tab\n",
       "        False: do not open plot in the browser, but do return the unique url\n",
-      "    sharing ('public' | 'private' | 'sharing') -- Toggle who can view this\n",
+      "    sharing ('public' | 'private' | 'secret') -- Toggle who can view this\n",
       "                                                  graph\n",
       "        - 'public': Anyone can view this graph. It will appear in your profile\n",
       "                    and can appear in search engines. You do not need to be\n",
@@ -386,6 +347,8 @@
       "                    notebook, anybody who is viewing that page will be able to\n",
       "                    view the graph. You do not need to be logged in to view\n",
       "                    this plot.\n",
+      "    world_readable (default=True) -- Deprecated: use \"sharing\".\n",
+      "                                     Make this figure private/public\n",
       "\n"
      ]
     }
@@ -396,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "Collecting git+https://github.com/plotly/publisher.git\r\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-PhytHt-build\r\n"
      ]
     }
    ],
@@ -439,15 +403,15 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'privacy.ipynb', 'python/privacy', 'Public, Private vs Secret Graphs',\n",
-    "    'How to set the privacy settings of plotly graphs in python.'\n",
-    "    'Three examples of different privacy options: public, private and secret.',\n",
-    "    name = 'Python Public, Private and Secret Graphs',\n",
-    "    thumbnail='/images/privacy.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='false', display_as='file_settings')    "
+    "    'privacy.ipynb', 'python/privacy/', 'Privacy | plotly',\n",
+    "    'How to set the privacy settings of plotly graphs in python. Three examples of different privacy options: public, private and secret.',\n",
+    "    title = 'Privacy | plotly',\n",
+    "    name = 'Privacy',\n",
+    "    language='python', page_type='example_index',\n",
+    "    display_as='file_settings', order=3)"
    ]
   },
   {
