python getting started edits

--- a/_posts/python/getting-started/getting-started.ipynb
+++ b/_posts/python/getting-started/getting-started.ipynb
@@ -11,43 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To install Plotly's Python package, use the package manager **pip** inside your terminal.<br>\n",
-    "If you don't have **pip** installed on your machine, [click here](https://pip.pypa.io/en/latest/installing.html) for pip's installation instructions."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$ pip install plotly"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$ sudo pip install plotly"
+    "To install Plotly's python package, use the package manager **pip** inside your terminal.<br>\n",
+    "If you don't have **pip** installed on your machine, [click here](https://pip.pypa.io/en/latest/installing.html) for pip's installation instructions.\n",
+    "<br>\n",
+    "<br>\n",
+    "`$ pip install plotly`\n",
+    "<br>or\n",
+    "<br>`$ sudo pip install plotly`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotly's Python package is [updated frequently](https://github.com/plotly/plotly.py/blob/master/CHANGELOG.md)! To upgrade, run:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$ pip install plotly --upgrade"
+    "Plotly's Python package is [updated frequently](https://github.com/plotly/plotly.py/blob/master/CHANGELOG.md)! To upgrade, run:\n",
+    "<br>\n",
+    "<br>\n",
+    "`$ pip install plotly --upgrade`"
    ]
   },
   {
@@ -62,20 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After installing the Plotly package, you're ready to fire up python: "
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$ python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "After installing the Plotly package, you're ready to fire up python:\n",
+    "<br>\n",
+    "<br>\n",
+    "`$ python`\n",
+    "<br>\n",
+    "<br>\n",
     "and set your credentials:"
    ]
   },
@@ -103,18 +75,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The initialization step places a special **.plotly/.credentials** file in your home directory. Your **~/.plotly/.credentials** file should look something like this:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "The initialization step places a special **.plotly/.credentials** file in your home directory. Your **~/.plotly/.credentials** file should look something like this:\n",
+    "<br>\n",
+    "```\n",
     "{\n",
     "    \"username\": \"DemoAccount\",\n",
     "    \"stream_ids\": [\"ylosqsyet5\", \"h2ct8btk1s\", \"oxz4fm883b\"],\n",
     "    \"api_key\": \"lr1c37zw81\"\n",
-    "}"
+    "}\n",
+    "```"
    ]
   },
   {
@@ -140,8 +109,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import plotly \n",
     "plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',\n",
@@ -356,37 +329,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copy and paste the following to create your first Plotly graph using the Plotly Python library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import plotly.plotly as py\n",
-    "from plotly.graph_objs import *\n",
-    "\n",
-    "trace0 = Scatter(\n",
-    "    x=[1, 2, 3, 4],\n",
-    "    y=[10, 15, 13, 17]\n",
-    ")\n",
-    "trace1 = Scatter(\n",
-    "    x=[1, 2, 3, 4],\n",
-    "    y=[16, 5, 11, 9]\n",
-    ")\n",
-    "data = Data([trace0, trace1])\n",
-    "\n",
-    "unique_url = py.plot(data, filename = 'basic-line')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "You can also create plotly graphs with **matplotlib** syntax. Learn more in our [matplotlib documentation](https://plot.ly/matplotlib/).\n",
     "You can also create plotly graphs within an **IPython notebook**. Learn more in our [IPython notebook documentation](https://plot.ly/ipython-notebooks/)."
    ]
@@ -409,38 +351,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **public**: \n",
-    "        Anyone can view this graph. It will appear in your profile\n",
-    "        and can appear in search engines. You do not need to be\n",
-    "        logged in to Plotly to view this chart.\n",
-    "* **private**:\n",
-    "        Only you can view this plot. It will not appear in the\n",
-    "        Plotly feed, your profile, or search engines. You must be\n",
-    "        logged in to Plotly to view this graph. You can privately\n",
-    "        share this graph with other Plotly users in your online\n",
-    "        Plotly account and they will need to be logged in to\n",
-    "        view this plot.\n",
-    "* **secret**: \n",
-    "        Anyone with this secret link can view this chart. It will\n",
-    "        not appear in the Plotly feed, your profile, or search\n",
-    "        engines. If it is embedded inside a webpage or an IPython\n",
-    "        notebook, anybody who is viewing that page will be able to\n",
-    "        view the graph. You do not need to be logged in to view\n",
-    "        this plot."
+    "- **public**: \n",
+    "       Anyone can view this graph. It will appear in your profile\n",
+    "       and can appear in search engines. You do not need to be\n",
+    "       logged in to Plotly to view this chart.\n",
+    "- **private**:\n",
+    "       Only you can view this plot. It will not appear in the\n",
+    "       Plotly feed, your profile, or search engines. You must be\n",
+    "       logged in to Plotly to view this graph. You can privately\n",
+    "       share this graph with other Plotly users in your online\n",
+    "       Plotly account and they will need to be logged in to\n",
+    "       view this plot.\n",
+    "- **secret**: \n",
+    "       Anyone with this secret link can view this chart. It will\n",
+    "       not appear in the Plotly feed, your profile, or search\n",
+    "       engines. If it is embedded inside a webpage or an IPython\n",
+    "       notebook, anybody who is viewing that page will be able to\n",
+    "       view the graph. You do not need to be logged in to view\n",
+    "       this plot."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more examples on privacy settings please visit [Python privacy documentation](https://plot.ly/python/privacy/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By default all plots are set to **public**.  Users with free account have the permission to keep one private plot. If you have additional private storage need, please visit [Plotly products page](https://plot.ly/products/)."
+    "By default all plots are set to **public**.  Users with free account have the permission to keep one private plot. If you have additional private storage need, please visit [Plotly products page](https://plot.ly/products/).<br> For more examples on privacy settings please visit [Python privacy documentation](https://plot.ly/python/privacy/)"
    ]
   },
   {
