--- a/_posts/python/getting-started/getting-started.ipynb
+++ b/_posts/python/getting-started/getting-started.ipynb
@@ -17,13 +17,9 @@
     "<br>\n",
     "`$ pip install plotly`\n",
     "<br>or\n",
-    "<br>`$ sudo pip install plotly`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<br>`$ sudo pip install plotly`\n",
+    "<br>\n",
+    "<br>\n",
     "Plotly's Python package is [updated frequently](https://github.com/plotly/plotly.py/blob/master/CHANGELOG.md)! To upgrade, run:\n",
     "<br>\n",
     "<br>\n",
@@ -35,13 +31,9 @@
    "metadata": {},
    "source": [
     "### Initialization for Online Plotting\n",
-    "Plotly provides a web-service for hosting graphs! Create a [free account](https://plot.ly/ssu/) to get started. Graphs are saved inside your online Plotly account and you control the privacy. Public hosting is free, for private hosting, check out our [paid plans](https://plot.ly/products/cloud/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Plotly provides a web-service for hosting graphs! Create a [free account](https://plot.ly/ssu/) to get started. Graphs are saved inside your online Plotly account and you control the privacy. Public hosting is free, for private hosting, check out our [paid plans](https://plot.ly/products/cloud/).\n",
+    "<br>\n",
+    "<br>\n",
     "After installing the Plotly package, you're ready to fire up python:\n",
     "<br>\n",
     "<br>\n",
@@ -68,13 +60,9 @@
    "metadata": {},
    "source": [
     "You'll need to replace **'DemoAccount'** and **'lr1c37zw81'** with *your* Plotly username and [API key](https://plot.ly/settings/api).<br>\n",
-    "Find your API key [here](https://plot.ly/settings/api)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Find your API key [here](https://plot.ly/settings/api).\n",
+    "<br>\n",
+    "<br>\n",
     "The initialization step places a special **.plotly/.credentials** file in your home directory. Your **~/.plotly/.credentials** file should look something like this:\n",
     "<br>\n",
     "```\n",
@@ -98,13 +86,9 @@
    "metadata": {},
    "source": [
     "Your API key for account on the public cloud will be different than the API key in Plotly On-Premise. Visit https://plotly.your-company.com/settings/api/ to find your Plotly On-Premise API key. Remember to replace \"your-company.com\" with the URL of your Plotly On-Premise server.\n",
-    "If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.\n",
+    "<br>\n",
+    "<br>\n",
     "In python, enter:"
    ]
   },
@@ -344,13 +328,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot can be set to three different type of privacies: public, private or secret."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Plot can be set to three different type of privacies: public, private or secret.\n",
+    "<br>\n",
+    "<br>\n",
     "- **public**: \n",
     "       Anyone can view this graph. It will appear in your profile\n",
     "       and can appear in search engines. You do not need to be\n",
@@ -368,13 +348,9 @@
     "       engines. If it is embedded inside a webpage or an IPython\n",
     "       notebook, anybody who is viewing that page will be able to\n",
     "       view the graph. You do not need to be logged in to view\n",
-    "       this plot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "       this plot.\n",
+    "\n",
+    "<br>\n",
     "By default all plots are set to **public**.  Users with free account have the permission to keep one private plot. If you have additional private storage need, please visit [Plotly products page](https://plot.ly/products/).<br> For more examples on privacy settings please visit [Python privacy documentation](https://plot.ly/python/privacy/)"
    ]
   },
