--- a/_posts/python/WebGL/comparewebgl.ipynb
+++ b/_posts/python/WebGL/comparewebgl.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "#WebGL vs SVG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###SCATTER PLOTS WITH 75,000 RANDOM POINTS"
+    "### SCATTER PLOTS WITH 75,000 RANDOM POINTS"
    ]
   },
   {
@@ -25,46 +16,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.8.12'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
-    "Find your api_key here: https://plot.ly/settings/api"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###WEBGL"
+    "### WEBGL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -72,13 +32,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9030.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9030.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,16 +70,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###SVG"
+    "### SVG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:236: UserWarning:\n",
+      "\n",
+      "Woah there! Look at all those points! Due to browser limitations, the Plotly SVG drawing functions have a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:\n",
+      "(1) Use the `plotly.graph_objs.Scattergl` trace object to generate a WebGl graph.\n",
+      "(2) Trying using the image API to return an image instead of a graph URL\n",
+      "(3) Use matplotlib\n",
+      "(4) See if you can create your visualization with fewer data points\n",
+      "\n",
+      "If the visualization you're using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1441: UserWarning:\n",
+      "\n",
+      "Estimated Draw Time Too Long\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -130,13 +110,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9032.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9032.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###References"
+    "### References"
    ]
   },
   {
@@ -235,6 +215,20 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
+    "import publisher\n",
+    "publisher.publish(\n",
+    "    'comparewebgl.ipynb', 'python/compare-webgl-svg/', 'Python Comparing WebGL vs SVG | plotly',\n",
+    "    'Comparing WebGL with Scattergl() to SVG with Scatter() in Python with Plotly.',\n",
+    "    title = 'Comparing WebGL vs SVG | plotly',\n",
+    "    name = 'Comparing WebGL vs SVG',\n",
+    "    language='python', page_type='example_index')\n",
+    "\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
@@ -270,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
